Update Locale Files

--- a/src/main/resources/locale/vi_VN.yml
+++ b/src/main/resources/locale/vi_VN.yml
@@ -15,7 +15,7 @@ no-permission: '&cBạn không có quyền để sử dụng!'
 no-console: '&cChỉ người chơi mới có thể thực hiện lệnh này.'
 invalid-amount: '&cSố tiền phải là một số nguyên dương.'
 unknown-player: '&cKhông thể tìm thấy người chơi: &b%player%'
-unknown-command: '&cLệnh không xác định: &b%input%'
+unknown-command: '&cLệnh không xác định'
 votifier-voted: '&eCảm ơn vì đã bỏ phiếu trên %service%! &b%amount% &eđã được thêm vào số dư của bạn.'
 leaderboard-empty-entry: 'Đây có thể là bạn!'
 
@@ -24,96 +24,83 @@ base-command-color: '&e'
 base-command-help: '&eSử dụng &b/points help &echo thông tin các lệnh.'
 
 # Help Command
-command-help-description: '&8 - &d/points help &7- Hiển thị menu trợ giúp ... Bạn đã đến'
 command-help-title: '&eCác lệnh có sẵn:'
+command-help-description: 'Hiển thị menu trợ giúp ... Bạn đã đến'
+command-help-list-description: '&8 - &d/%cmd% %subcmd% %args% &7- %desc%'
+command-help-list-description-no-args: '&8 - &d/%cmd% %subcmd% &7- %desc%'
 
 # Give Command
-command-give-description: '&8 - &d/points give &7- Trao cho người chơi points'
-command-give-usage: '&cSử dụng: &e/points give <người chơi> <số lượng>'
+command-give-description: 'Trao cho người chơi points'
 command-give-success: '&b%player% &ađã nhận được &b%amount% &a%currency%.'
 command-give-received: '&eBạn đã nhận được &b%amount% &e%currency%.'
 
 # Give All Command
-command-giveall-description: '&8 - &d/points giveall &7- Trao cho tất cả người chơi trực tuyến points'
-command-giveall-usage: '&cSử dụng: &e/points giveall <số lượng> [*]'
+command-giveall-description: 'Trao cho tất cả người chơi trực tuyến points'
 command-giveall-success: '&aTrao &b%amount% &a%currency% cho tất cả người chơi trực tuyến.'
 
 # Take Command
-command-take-description: '&8 - &d/points take &7- Lấy points từ người chơi'
-command-take-usage: '&cSử dụng: &e/points take <người chơi> <số lượng>'
+command-take-description: 'Lấy points từ người chơi'
 command-take-success: '&aLấy đi &b%amount% &a%currency% từ &b%player%&a.'
 command-take-lacking-funds: '&b%player% &ckhông có đủ %currency% cho điều này, vì vậy số dư của họ được đặt thành 0.'
 
 # Look Command
-command-look-description: '&8 - &d/points look &7- Xem points của người chơi'
-command-look-usage: '&cSử dụng: &e/points look <người chơi>'
+command-look-description: 'Xem points của người chơi'
 command-look-success: '&b%player% &ecó &b%amount% &e%currency%.'
 
 # Pay Command
-command-pay-description: '&8 - &d/points pay &7- Chuyển points cho người chơi'
-command-pay-usage: '&cSử dụng: &e/points pay <người chơi> <số lượng>'
+command-pay-description: 'Chuyển points cho người chơi'
 command-pay-sent: '&aBạn đã chuyển cho &b%player% %amount% &a%currency%.'
 command-pay-received: '&eBạn đã được chuyển &b%amount% &e%currency% bởi &b%player%&e.'
 command-pay-lacking-funds: '&cBạn không có đủ %currency% cho điều này.'
 
 # Set Command
-command-set-description: '&8 - &d/points set &7- Đặt số points của người chơi'
-command-set-usage: '&cSử dụng: &e/points set <người chơi> <số lượng>'
+command-set-description: 'Đặt số points của người chơi'
 command-set-success: '&aĐặt số %currency% của &b%player% &athành &b%amount%&a.'
 
 # Reset Command
-command-reset-description: '&8 - &d/points reset &7- Đặt lại số points của người chơi'
-command-reset-usage: '&cSử dụng: &e/points reset <người chơi>'
+command-reset-description: 'Đặt lại số points của người chơi'
 command-reset-success: '&aĐặt lại số %currency% cho &b%player% &a.'
 
 # Me Command
-command-me-description: '&8 - &d/points me &7- Xem số points của bạn'
-command-me-usage: '&cSử dụng: &d/points me'
+command-me-description: 'Xem số points của bạn'
 command-me-success: '&eBạn có &b%amount% &e%currency%.'
 
 # Lead Command
-command-lead-description: '&8 - &d/points lead &7- Xem bảng xếp hạng'
-command-lead-usage: '&cSử dụng: &e/points lead [next|prev|#]'
+command-lead-description: 'Xem bảng xếp hạng'
 command-lead-title: '&eBảng Xếp Hạng &7(Trang #%page%/%pages%)'
 command-lead-entry: '&b%position%). &e%player% &7- &6%amount% %currency%'
 
 # Broadcast Command
-command-broadcast-description: '&8 - &d/points broadcast &7- Broadcast points của người chơi'
-command-broadcast-usage: '&cSử dụng: &e/points broadcast <người chơi>'
+command-broadcast-description: 'Broadcast points của người chơi'
 command-broadcast-message: '&b%player% &ecó &b%amount% &e%currency%.'
 
 # Reload Command
-command-reload-description: '&8 - &d/points reload &7- Tải lại plugin'
-command-reload-usage: '&cSử dụng: &e/points reload'
+command-reload-description: 'Tải lại plugin'
 command-reload-success: '&aCác tệp cấu hình và ngôn ngữ đã được tải lại.'
 
 # Export Command
-command-export-description: '&8 - &d/points export &7- Xuất dữ liệu sang storage.yml'
-command-export-usage: '&cSử dụng: &e/points export'
+command-export-description: 'Xuất dữ liệu sang storage.yml'
 command-export-success: '&aLưu dữ liệu đã được xuất sang storage.yml.'
 command-export-warning: '&cLưu ý: Tệp storage.yml đã tồn tại. Nếu bạn muốn ghi đè nó, sử dụng &b/points export confirm&c.'
 
 # Import Command
-command-import-description: '&8 - &d/points import &7- Nhập dữ liệu từ storage.yml'
-command-import-usage: '&cSử dụng: &e/points import'
+command-import-description: 'Nhập dữ liệu từ storage.yml'
 command-import-success: '&aLưu dữ liệu đã được nhập từ storage.yml.'
 command-import-no-backup: '&cKhông thể nhập, storage.yml không tồn tại. Bạn có thể tạo một cái bằng &b/points export &cvà sử dụng nó để chuyển dữ liệu giữa các loại cơ sở dữ liệu.'
 command-import-warning: '&cLưu ý: Thao tác này sẽ xóa tất cả dữ liệu khỏi cơ sở dữ liệu đang hoạt động và thay thế nó bằng nội dung của storage.yml. &cLoại cơ sở dữ liệu hiện đang hoạt động là &b&o&l%type%&c. &cNếu bạn hoàn toàn chắc chắn về điều này, hãy sử dụng &b/points import confirm&c.'
 
 # Convert Command
-command-convert-description: '&8 - &d/points convert &7- Load dữ liệu tiền tệ từ một plugin khác'
-command-convert-usage: '&cSử dụng: &e/points convert <plugin>'
+command-convert-description: 'Load dữ liệu tiền tệ từ một plugin khác'
 command-convert-invalid: '&b%plugin% &ckhông phải là tên plugin tiền tệ có thể chuyển đổi.'
 command-convert-success: '&aDữ liệu tiền tệ từ &b%plugin% &ađã được chuyển đổi.'
 command-convert-failure: '&cĐã xảy ra lỗi khi cố gắng chuyển đổi dữ liệu. Vui lòng kiểm tra bảng điều khiển của bạn và báo cáo bất kỳ lỗi nào cho tác giả plugin PlayerPoints.'
 command-convert-warning: '&cLưu ý: Thao tác này sẽ xóa tất cả dữ liệu khỏi cơ sở dữ liệu đang hoạt động và thay thế bằng dữ liệu từ &b%plugin%&c. &cNếu bạn hoàn toàn chắc chắn về điều này, hãy sử dụng &b/points convert %plugin% confirm&c.'
 
 # Import Legacy Command
-command-importlegacy-description: '&8 - &d/points importlegacy &7- Nhập một bảng kế thừa'
-command-importlegacy-usage: '&cSử dụng: &e/points importlegacy <table>'
+command-importlegacy-description: 'Nhập một bảng kế thừa'
 command-importlegacy-success: '&aĐã nhập thành công dữ liệu kế thừa từ &b%table%&a.'
 command-importlegacy-failure: '&cKhông thể nhập dữ liệu cũ từ &b%table%&c. Bảng có tồn tại không?'
 command-importlegacy-only-mysql: '&cLệnh này chỉ khả dụng khi bạn đã bật MySQL.'
 
 # Version Command
-command-version-description: '&8 - &d/points version &7- Hiển thị thông tin phiên bản cho PlayerPoints'
+command-version-description: 'Hiển thị thông tin phiên bản cho PlayerPoints'
