Provide better output for converters

--- a/src/main/resources/locale/en_US.yml
+++ b/src/main/resources/locale/en_US.yml
@@ -104,7 +104,7 @@ command-import-warning: '&cNotice: This operation will delete all data from the 
 command-convert-description: '&8 - &d/points convert &7- Loads currency data from another plugin'
 command-convert-usage: '&cUsage: &e/points convert <plugin>'
 command-convert-invalid: '&b%plugin% &cis not a convertible currency plugin name.'
-command-convert-success: '&aCurrency data from &b%plugin% &ahas been converted.'
+command-convert-success: '&aCurrency data from &b%plugin% &ais being converted.'
 command-convert-failure: '&cAn error occurred while attempting to convert the data. Please check your console and report any errors to the PlayerPoints plugin author.'
 command-convert-warning: '&cNotice: This operation will delete all data from the active database and replace it with the data from &b%plugin%&c. &cIf you are absolutely sure about this, use &b/points convert %plugin% confirm&c.'
 
